src/test/deca/context/valid/ContextSansObjet/Unitaire/NoOperation.deca
//Description
//  Test d'un NoOperation
//
//Résultat
//  ok
{
;
}