src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/EqBooleanNull.deca
//Description
//  Test d'égalité entre un boolean et un null
//
//Réponse
//  Erreur contextuelle ligne 9
//  types incompatibles pour faire la comparaison
{
    boolean x;
    x == null;
}